--- a/package.json
+++ b/package.json
@@ -11,22 +11,32 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.5",
+    "@radix-ui/react-toast": "^1.1.5",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
     "leva": "^0.9.35",
     "lodash.clamp": "^4.0.3",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-use-gesture": "^9.1.3",
     "react-use-measure": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/lodash.clamp": "^4.0.9",
+    "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
